tambah create team Front End

--- a/detail-user.html
+++ b/detail-user.html
@@ -69,6 +69,12 @@
               <span class="link-title">Create User</span>
             </a>
           </li>
+          <li class="nav-item">
+            <a href="create-team.html" class="nav-link">
+              <i class="link-icon" data-feather="plus-square"></i>
+              <span class="link-title">Create Team</span>
+            </a>
+          </li>
 
           <li class="nav-item nav-category">Leader</li>
           <li class="nav-item">
@@ -207,10 +213,6 @@
                       </div>
                     </div>
                     <div class="col-md-6">
-                      <!-- <div class="form-group">
-                        <label for="report">Total Report</label>
-                        <input id="report" class="form-control" name="report" type="text" value="23" readonly>
-                      </div> -->
                       <div class="form-group">
                         <label for="email">Email</label>
                         <input id="email" class="form-control" name="email" type="text" value="yopigambyok@gmail.com"
