--- a/list-my-absensi.html
+++ b/list-my-absensi.html
@@ -69,6 +69,12 @@
                 <span class="link-title">Create User</span>
               </a>
             </li>
+            <li class="nav-item">
+              <a href="create-team.html" class="nav-link">
+                <i class="link-icon" data-feather="plus-square"></i>
+                <span class="link-title">Create Team</span>
+              </a>
+            </li>
   
             <li class="nav-item nav-category">Leader</li>
             <li class="nav-item">
