tambah create team Front End

--- a/create-team.html
+++ b/create-team.html
@@ -185,7 +185,7 @@
             <div class="col-md-12 col-lg-6 grid-margin">
               <div class="card">
                 <div class="card-body">
-                  <h6 class="card-title">Form Create User</h6>
+                  <h6 class="card-title">Form Create Team</h6>
                   <p class="card-description">Lorem ipsum dolor sit, amet consectetur adipisicing elit.</p>
                   <form class="forms-sample">
                     <div class="form-group row">
