--- a/edit-user.html
+++ b/edit-user.html
@@ -70,6 +70,12 @@
                       </a>
                     </li>
                     <li class="nav-item">
+                      <a href="list-team.html" class="nav-link">
+                        <i class="link-icon" data-feather="flag"></i>
+                        <span class="link-title">List Team</span>
+                      </a>
+                    </li>
+                    <li class="nav-item">
                       <a href="create-team.html" class="nav-link">
                         <i class="link-icon" data-feather="plus-square"></i>
                         <span class="link-title">Create Team</span>
