--- a/list-team.html
+++ b/list-team.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Manage Personal - Absensi</title>
+  <title>List Team - Absensi</title>
   <link rel="stylesheet" href="assets/vendors/core/core.css">
   <link rel="stylesheet" href="assets/vendors/bootstrap-datepicker/bootstrap-datepicker.min.css">
   <link rel="stylesheet" href="assets/fonts/feather-font/css/iconfont.css">
@@ -185,11 +185,11 @@
 
         <div class="d-flex justify-content-between align-items-center flex-wrap grid-margin">
           <div>
-            <h4 class="mb-3 mb-md-0">Manage Users</h4>
+            <h4 class="mb-3 mb-md-0">Create Team</h4>
           </div>
         </div>
 
-        <a href="create-user.html" class="btn btn-primary mb-3 text-white">Create User</a>
+        <a href="create-team.html" class="btn btn-primary mb-3 text-white">Create Team</a>
 
         <div class="row">
           <div class="col-md-12 grid-margin stretch-card">
@@ -203,21 +203,19 @@
                     <thead>
                       <tr>
                         <th>No</th>
-                        <th>Name</th>
-                        <th>Position</th>
-                        <th>Team</th>
+                        <th>Name Team</th>
+                        <th>Status</th>
                         <th>Action</th>
                       </tr>
                     </thead>
                     <tbody>
                       <tr>
                         <td>1</td>
-                        <td>Alfian Prisma Yopiangga</td>
-                        <td>Admin</td>
                         <td>Tim A</td>
+                        <td>Active</td>
                         <td>
-                          <a href="edit-user.html" class="badge badge-light">Edit</a>
-                          <a href="detail-user.html" class="badge badge-primary">Detail</a>
+                          <a href="edit-team.html" class="badge badge-primary">Edit</a>
+                          <a href="" class="badge badge-danger">Delete</a>
                         </td>
                       </tr>
 
@@ -228,7 +226,6 @@
             </div>
           </div>
         </div>
-
 
       </div>
 
