--- a/manage-user.html
+++ b/manage-user.html
@@ -69,6 +69,12 @@
             </a>
           </li>
           <li class="nav-item">
+            <a href="list-team.html" class="nav-link">
+              <i class="link-icon" data-feather="flag"></i>
+              <span class="link-title">List Team</span>
+            </a>
+          </li>
+          <li class="nav-item">
             <a href="create-team.html" class="nav-link">
               <i class="link-icon" data-feather="plus-square"></i>
               <span class="link-title">Create Team</span>
@@ -257,11 +263,12 @@
                                                 <th>#</th>
                                                 <th>Nama</th>
                                                 <th>Hari/Tanggal</th>
-                                                <th>Masuk</th>
-                                                <th>Pulang</th>
+                                                <th>Check In</th>
+                                                <th>Check Out</th>
                                                 <th>Tim</th>
                                                 <th>Posisi</th>
                                                 <th>Status</th>
+                                                <th>Action</th>
                                             </tr>
                                         </thead>
                                         <tbody>
@@ -276,6 +283,10 @@
                                                 <td>
                                                     <div class="badge badge-success">Hadir</div>
                                                 </td>
+                                                <td>
+                                                  <a href="edit-absen.html" class="badge badge-primary">Edit</a>
+                                                  <a href="" class="badge badge-danger">Delete</a>
+                                                </td>
                                             </tr>
                                             <tr>
                                                 <th>2</th>
@@ -287,6 +298,10 @@
                                                 <td>User</td>
                                                 <td>
                                                     <div class="badge badge-warning">Terlambat</div>
+                                                </td>
+                                                <td>
+                                                  <a href="edit-absen.html" class="badge badge-primary">Edit</a>
+                                                  <a href="" class="badge badge-danger">Delete</a>
                                                 </td>
                                             </tr>
                                             <tr>
@@ -300,6 +315,10 @@
                                                 <td>
                                                     <div class="badge badge-danger">Alpha</div>
                                                 </td>
+                                                <td>
+                                                  <a href="edit-absen.html" class="badge badge-primary">Edit</a>
+                                                  <a href="" class="badge badge-danger">Delete</a>
+                                                </td>
                                             </tr>
                                             <tr>
                                                 <th>4</th>
@@ -311,6 +330,10 @@
                                                 <td>User</td>
                                                 <td>
                                                     <div class="badge badge-info">Izin</div>
+                                                </td>
+                                                <td>
+                                                  <a href="edit-absen.html" class="badge badge-primary">Edit</a>
+                                                  <a href="" class="badge badge-danger">Delete</a>
                                                 </td>
                                             </tr>
                                             <tr>
@@ -324,6 +347,10 @@
                                                 <td>
                                                     <div class="badge badge-info">Izin</div>
                                                 </td>
+                                                <td>
+                                                  <a href="edit-absen.html" class="badge badge-primary">Edit</a>
+                                                  <a href="" class="badge badge-danger">Delete</a>
+                                                </td>
                                             </tr>
                                             <tr>
                                                 <th>6</th>
@@ -335,6 +362,10 @@
                                                 <td>User</td>
                                                 <td>
                                                     <div class="badge badge-info">Izin</div>
+                                                </td>
+                                                <td>
+                                                  <a href="edit-absen.html" class="badge badge-primary">Edit</a>
+                                                  <a href="" class="badge badge-danger">Delete</a>
                                                 </td>
                                             </tr>
                                         </tbody>
