menghapus is active auto pada navbar template js

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
       <div class="sidebar-body">
         <ul class="nav">
           <li class="nav-item nav-category">Main</li>
-          <li class="nav-item">
+          <li class="nav-item active">
             <a href="index.html" class="nav-link">
               <i class="link-icon" data-feather="box"></i>
               <span class="link-title">Dashboard</span>
