--- a/create-team.html
+++ b/create-team.html
@@ -12,6 +12,9 @@
 	<link rel="stylesheet" href="assets/vendors/flag-icon-css/css/flag-icon.min.css">
 	<link rel="stylesheet" href="assets/css/demo_1/style.css">
   <link rel="shortcut icon" href="assets/images/favicon.png" />
+  <link rel="stylesheet" href="assets/vendors/sweetalert2/sweetalert2.min.css">
+  <link rel="stylesheet" href="assets/vendors/datatables.net-bs4/dataTables.bootstrap4.css">
+  <link rel="stylesheet" href="assets/vendors/datatables.net-bs4/dataTables.min.css">
 </head>
 <body>
 	<div class="main-wrapper">
@@ -233,6 +236,17 @@
 	<script src="assets/js/template.js"></script>
   <script src="assets/js/dashboard.js"></script>
   <script src="assets/js/datepicker.js"></script>
+
+    <script src="assets/vendors/datatables.net/jquery.dataTables.js"></script>
+    <script src="assets/vendors/datatables.net-bs4/dataTables.bootstrap4.js"></script>
+    <script src="assets/js/data-table.js"></script>
+    <script src="assets/vendors/datatables.net/dataTables.buttons.min.js"></script>
+    <script src="assets/vendors/datatables.net/buttons.print.min.js"></script>
+
+    <script src="assets/ajax/jszip.min.js"></script>
+    <script src="assets/ajax/pdfmake.min.js"></script>
+    <script src="assets/ajax/vfs_fonts.js"></script>
+    <script src="assets/ajax/buttons.html5.min.js"></script>
 
 </body>
 
