--- a/list-my-absensi.html
+++ b/list-my-absensi.html
@@ -7,12 +7,14 @@
 	<meta http-equiv="X-UA-Compatible" content="ie=edge">
 	<title>List my Absensi - Absensi</title>
 	<link rel="stylesheet" href="assets/vendors/core/core.css">
-    <link rel="stylesheet" href="assets/vendors/bootstrap-datepicker/bootstrap-datepicker.min.css">
+  <link rel="stylesheet" href="assets/vendors/bootstrap-datepicker/bootstrap-datepicker.min.css">
 	<link rel="stylesheet" href="assets/fonts/feather-font/css/iconfont.css">
 	<link rel="stylesheet" href="assets/vendors/flag-icon-css/css/flag-icon.min.css">
 	<link rel="stylesheet" href="assets/css/demo_1/style.css">
-    <link rel="shortcut icon" href="assets/images/favicon.png" />
-    <link rel="stylesheet" href="assets/vendors/sweetalert2/sweetalert2.min.css">
+  <link rel="shortcut icon" href="assets/images/favicon.png" />
+  <link rel="stylesheet" href="assets/vendors/sweetalert2/sweetalert2.min.css">
+  <link rel="stylesheet" href="assets/vendors/datatables.net-bs4/dataTables.bootstrap4.css">
+  <link rel="stylesheet" href="assets/vendors/datatables.net-bs4/dataTables.min.css">
 </head>
 <body>
 	<div class="main-wrapper">
@@ -232,9 +234,8 @@
                         <div class="card">
                           <div class="card-body">
                             <h6 class="card-title">Table Absensi</h6>
-                            <button class="btn btn-primary">Cetak</button>
                             <div class="table-responsive">
-                                    <table class="table table-hover">
+                                    <table class="table table-hover" id="myTable">
                                         <thead>
                                             <tr>
                                                 <th>#</th>
@@ -306,6 +307,57 @@
                                                     <div class="badge badge-info">Izin</div>
                                                 </td>
                                             </tr>
+                                            <tr>
+                                              <th>7</th>
+                                              <td>Mark</td>
+                                              <td>Minggu, 01 November 2020</td>
+                                              <td>07.00</td>
+                                              <td>16.00</td>
+                                              <td>
+                                                  <div class="badge badge-success">Hadir</div>
+                                              </td>
+                                            </tr>
+                                            <tr>
+                                              <th>8</th>
+                                              <td>Mark</td>
+                                              <td>Minggu, 01 November 2020</td>
+                                              <td>07.00</td>
+                                              <td>16.00</td>
+                                              <td>
+                                                  <div class="badge badge-success">Hadir</div>
+                                              </td>
+                                            </tr>
+                                            <tr>
+                                              <th>9</th>
+                                              <td>Mark</td>
+                                              <td>Minggu, 01 November 2020</td>
+                                              <td>07.00</td>
+                                              <td>16.00</td>
+                                              <td>
+                                                  <div class="badge badge-success">Hadir</div>
+                                              </td>
+                                            </tr>
+                                            <tr>
+                                              <th>10</th>
+                                              <td>Mark</td>
+                                              <td>Minggu, 01 November 2020</td>
+                                              <td>07.00</td>
+                                              <td>16.00</td>
+                                              <td>
+                                                  <div class="badge badge-success">Hadir</div>
+                                              </td>
+                                            </tr>
+                                            <tr>
+                                              <th>11</th>
+                                              <td>Mark</td>
+                                              <td>Minggu, 01 November 2020</td>
+                                              <td>07.00</td>
+                                              <td>16.00</td>
+                                              <td>
+                                                  <div class="badge badge-success">Hadir</div>
+                                              </td>
+                                            </tr>
+
                                         </tbody>
                                     </table>
                             </div>
@@ -372,22 +424,33 @@
 			</footer>
 		
 		</div>
-	</div>
-
-	<script src="assets/vendors/core/core.js"></script>
+  </div>
+  
+	  <script src="assets/vendors/core/core.js"></script>
     <script src="assets/vendors/chartjs/Chart.min.js"></script>
     <script src="assets/vendors/jquery.flot/jquery.flot.js"></script>
     <script src="assets/vendors/jquery.flot/jquery.flot.resize.js"></script>
     <script src="assets/vendors/bootstrap-datepicker/bootstrap-datepicker.min.js"></script>
     <script src="assets/vendors/apexcharts/apexcharts.min.js"></script>
     <script src="assets/vendors/progressbar.js/progressbar.min.js"></script>
-	<script src="assets/vendors/feather-icons/feather.min.js"></script>
+	  <script src="assets/vendors/feather-icons/feather.min.js"></script>
     <script src="assets/js/template.js"></script>
     <script src="assets/js/dashboard.js"></script>
     <script src="assets/js/datepicker.js"></script>
     <script src="assets/js/sweet-alert.js"></script>
     <script src="assets/vendors/sweetalert2/sweetalert2.min.js"></script>
     <script src="assets/vendors/promise-polyfill/polyfill.min.js"></script>
+
+    <script src="assets/vendors/datatables.net/jquery.dataTables.js"></script>
+    <script src="assets/vendors/datatables.net-bs4/dataTables.bootstrap4.js"></script>
+    <script src="assets/js/data-table.js"></script>
+    <script src="assets/vendors/datatables.net/dataTables.buttons.min.js"></script>
+    <script src="assets/vendors/datatables.net/buttons.print.min.js"></script>
+
+    <script src="assets/ajax/jszip.min.js"></script>
+    <script src="assets/ajax/pdfmake.min.js"></script>
+    <script src="assets/ajax/vfs_fonts.js"></script>
+    <script src="assets/ajax/buttons.html5.min.js"></script>
 
 </body>
 
