Penambahan dropdown tanggal pada manage-user.html

--- a/manage-user.html
+++ b/manage-user.html
@@ -196,6 +196,45 @@
                     </div>
                     <div class="col-lg-9 col-md-12 d-flex justify-content-end">
                         <div class="dropdown mr-2">
+                          <button class="btn btn-light" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                              Tanggal <i class="link-icon" data-feather="chevron-down" style="width: 20px; height: 20px;"></i>
+                          </button>
+                          <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+                              <a class="dropdown-item" href="#">1</a>
+                              <a class="dropdown-item" href="#">2</a>
+                              <a class="dropdown-item" href="#">3</a>
+                              <a class="dropdown-item" href="#">4</a>
+                              <a class="dropdown-item" href="#">5</a>
+                              <a class="dropdown-item" href="#">6</a>
+                              <a class="dropdown-item" href="#">7</a>
+                              <a class="dropdown-item" href="#">8</a>
+                              <a class="dropdown-item" href="#">9</a>
+                              <a class="dropdown-item" href="#">10</a>
+                              <a class="dropdown-item" href="#">11</a>
+                              <a class="dropdown-item" href="#">12</a>
+                              <a class="dropdown-item" href="#">13</a>
+                              <a class="dropdown-item" href="#">14</a>
+                              <a class="dropdown-item" href="#">15</a>
+                              <a class="dropdown-item" href="#">16</a>
+                              <a class="dropdown-item" href="#">17</a>
+                              <a class="dropdown-item" href="#">18</a>
+                              <a class="dropdown-item" href="#">19</a>
+                              <a class="dropdown-item" href="#">20</a>
+                              <a class="dropdown-item" href="#">21</a>
+                              <a class="dropdown-item" href="#">22</a>
+                              <a class="dropdown-item" href="#">23</a>
+                              <a class="dropdown-item" href="#">24</a>
+                              <a class="dropdown-item" href="#">25</a>
+                              <a class="dropdown-item" href="#">26</a>
+                              <a class="dropdown-item" href="#">27</a>
+                              <a class="dropdown-item" href="#">28</a>
+                              <a class="dropdown-item" href="#">29</a>
+                              <a class="dropdown-item" href="#">30</a>
+                              <a class="dropdown-item" href="#">31</a>
+                              
+                          </div>
+                        </div>
+                        <div class="dropdown mr-2">
                             <button class="btn btn-light" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                                 Bulan <i class="link-icon" data-feather="chevron-down" style="width: 20px; height: 20px;"></i>
                             </button>
