--- a/create-user.html
+++ b/create-user.html
@@ -225,6 +225,10 @@
                           <option>User</option>
                         </select>
                       </div>
+                      <div class="form-group">
+                        <label>Time Work (12 hour):</label>
+                        <input class="form-control" data-inputmask="'alias': 'datetime'" data-inputmask-inputformat="hh:mm tm" name="time-work"/>
+                      </div>
                     </div>
                     <div class="col-md-6">
                       <div class="form-group">
@@ -272,6 +276,11 @@
   <script src="assets/js/template.js"></script>
   <script src="assets/js/dashboard.js"></script>
   <script src="assets/js/datepicker.js"></script>
+
+
+	<script src="assets/vendors/inputmask/jquery.inputmask.min.js"></script>
+	<script src="assets/js/inputmask.js"></script>
+
 
   <script src="assets/vendors/datatables.net/jquery.dataTables.js"></script>
     <script src="assets/vendors/datatables.net-bs4/dataTables.bootstrap4.js"></script>
