--- a/create-user.html
+++ b/create-user.html
@@ -243,6 +243,11 @@
                         <label for="password">Password</label>
                         <input id="password" class="form-control" name="password" type="text">
                       </div>
+                      <div class="form-group">
+                        <label>Time End (12 hour):</label>
+                        <input class="form-control" data-inputmask="'alias': 'datetime'"
+                          data-inputmask-inputformat="hh:mm tm" name="time-end" />
+                      </div>
                     </div>
                   </div>
                   <input class="btn btn-primary" type="submit" value="Create">
