--- a/edit-user.html
+++ b/edit-user.html
@@ -233,6 +233,11 @@
                     <input class="form-control" data-inputmask="'alias': 'datetime'"
                       data-inputmask-inputformat="hh:mm tm" name="time-work" />
                   </div>
+                  <div class="form-group">
+                    <label>Time End (12 hour):</label>
+                    <input class="form-control" data-inputmask="'alias': 'datetime'"
+                      data-inputmask-inputformat="hh:mm tm" name="time-end" />
+                  </div>
                   <button type="submit" class="btn btn-primary mr-2">Update</button>
                   <a href="manage-personal.html" class="btn btn-light">Cancel</a>
                 </form>
